--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This is a new paragraph!.</p>
-    <p>This is a new feature!</p>
+    <p>This is a new feature! [button]</p>
 </body>
 </html>
