--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Code of our page!</title>
 </head>
 <body>
-    <p>This is a new paragraph!.</p>git 
+    <p>This is a new paragraph!.</p> 
     <p>This is a new feature! (dropdown)</p>
 </body>
 </html>
